--- a/devices/ramips_mt7621/.config
+++ b/devices/ramips_mt7621/.config
@@ -3,29 +3,51 @@ CONFIG_TARGET_ramips=y
 CONFIG_TARGET_ramips_mt7621=y
 CONFIG_TARGET_MULTI_PROFILE=y
 CONFIG_TARGET_ROOTFS_INITRAMFS=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-cr660x=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-3g=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-3-pro=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-4=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-ac2100=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaoyu_xy-c5=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_lenovo_newifi-d1=y
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-cr660x=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-3g=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-3-pro=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-4=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_redmi-router-ac2100=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaomi_mi-router-ac2100=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_xiaoyu_xy-c5=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_lenovo_newifi-d1=n
 CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_d-team_newifi-d2=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_jdcloud_re-sp-01b=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_glinet_gl-mt1300=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_phicomm_k2p=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_asus_rt-ac85p=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6220=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6260=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6700-v2=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6800=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6850=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6900-v2=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r7450=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_jcg_y2=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_jcg_q20=y
-CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_gehua_ghl-r-001=y
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_jdcloud_re-sp-01b=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_glinet_gl-mt1300=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_phicomm_k2p=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_asus_rt-ac85p=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6220=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6260=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6700-v2=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6800=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6850=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r6900-v2=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_netgear_r7450=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_jcg_y2=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_jcg_q20=n
+CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_gehua_ghl-r-001=n
+
+# Applications
+CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-syncdial=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-socat=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-turboacc=y
+CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
+CONFIG_PACKAGE_luci-app-sqm=y
+CONFIG_PACKAGE_luci-app-serverchan=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_luci-app-eqos=y
+CONFIG_PACKAGE_luci-app-mwan3=y
+CONFIG_PACKAGE_luci-app-mwan3helper=y
+CONFIG_PACKAGE_luci-app-adguardhome=y
+
 
 CONFIG_PACKAGE_luci-ssl=y # uhttpd服务
 
