--- a/devices/ramips_mt7621/.config
+++ b/devices/ramips_mt7621/.config
@@ -47,6 +47,9 @@ CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-adguardhome=y
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
+CONFIG_PACKAGE_luci-app-netspeedtest=y
+CONFIG_PACKAGE_luci-app-ramfree=y
 
 
 CONFIG_PACKAGE_luci-ssl=y # uhttpd服务
